Fix align center

--- a/src/popup/components/Options/Option/option.pcss
+++ b/src/popup/components/Options/Option/option.pcss
@@ -8,6 +8,7 @@
 
     .action {
         display: flex;
+        align-items: center;
         padding: 1.1rem 1.6rem;
         cursor: pointer;
         transition-property: background, opacity;
